src/test/ui/parser/removed-syntax-field-let.rs
struct S {
    let foo: (),
    //~^  ERROR expected identifier, found keyword `let`
    //~^^ ERROR expected `:`, found `foo`
}

fn main() {}
